--- a/invoice/css/style.scss
+++ b/invoice/css/style.scss
@@ -28,6 +28,14 @@ body {
   flex-direction: column;
   gap: 48px;
   align-items: center;
+  @media screen and (max-width: 639px) {
+    width: 200%;
+    scale: .5;
+    transform-origin: left;
+    #print-btn{
+      font-size: 32px !important;
+    }
+  }
   section {
     width: 100%;
   }
@@ -41,6 +49,7 @@ body {
     display: flex;
     width: 100%;
     justify-content: space-between;
+    gap: 16px;
     .org-info {
       display: flex;
       flex-direction: column;
