--- a/invoice/css/style.css
+++ b/invoice/css/style.css
@@ -32,7 +32,7 @@
 @media screen and (max-width: 639px) {
   .bill-print {
     width: 200%;
-    scale: 0.5;
+    transform: scale(0.5);
     transform-origin: left;
   }
   .bill-print #print-btn {
