--- a/invoice/css/style.css
+++ b/invoice/css/style.css
@@ -29,6 +29,10 @@
   gap: 48px;
   align-items: center;
 }
+.bill-print img {
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+}
 @media screen and (max-width: 639px) {
   .bill-print {
     width: 200%;
