--- a/invoice/css/style.scss
+++ b/invoice/css/style.scss
@@ -106,6 +106,11 @@ body {
   & > section:nth-child(4) {
     display: flex;
     justify-content: space-between;
+    .org-seal {
+      height: 128px;
+      object-fit: contain;
+      width: auto;
+    }
   }
 
   #print-btn {
@@ -120,10 +125,5 @@ body {
     &:hover {
       background-color: rgba(129, 41, 144, 0.87);
     }
-  }
-
-  .org-seal {
-    height: 128px;
-    width: fit-content;
   }
 }
